wip on mongo integration

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,14 @@
                         <td id="locationText"></td>
                         <td id="timeText"></td>
                     </tr>
-                    
+                    <tbody id="timezoneTable">
+                    <% locationData.forEach((data) => { %>
+                        <tr class="w-full">
+                            <td><%= data.location %></td>
+                            <td><%= data.time %></td>
+                        </tr>
+                    <% }); %>
+                    </tbody>
                     <tbody id="timezoneTable">
                     </tbody>
                 </table>
